# foamdapy

./: .gitignore  LICENSE  README.md  pyproject.toml  tut_customMixerVessel.ipynb  tut_damBreak_de_100.ipynb  tut_ensemble_builder.ipynb  tutorials.ipynb
foamdapy/: __init__.py  ensemble_builder.py  foamdapy.py  foamer.py  tools.py
notebooks/: tut_customMixerVessel.ipynb  tut_ensemble_builder.ipynb  tutorials.ipynb
of_cases/customMixerVessel/: Allrun
of_cases/customMixerVessel.true/: Allrun  Allrun.pre
of_cases/customMixerVessel.true/0.orig/: U.air  U.oil  alpha.air  alpha.oil  epsilon  k  nuTilda  nut  p_rgh
of_cases/customMixerVessel.true/constant/: MRFProperties
of_cases/customMixerVessel.true/orig.1.5/: U  U.air  U.oil  alpha.air  alpha.oil  alphas  p  p_rgh  phi  phi.air  phi.oil  rho
of_cases/customMixerVessel.true/orig.1.5/1.5/: phi  phi.oil  rho
of_cases/customMixerVessel.true/orig.1.5/1.5/uniform/: time  (+1 more)
of_cases/customMixerVessel.true/orig.1.5/uniform/: cumulativeContErr  time
of_cases/customMixerVessel.true/system/: controlDict  createPatchDict  extrudeMeshDict.inlet  fvSolution  setFieldsDict  topoSetDict.patch
of_cases/customMixerVessel/0.orig/: Theta
of_cases/customMixerVessel/constant/: transportProperties
of_cases/customMixerVessel/orig.1.5/: U  U.air  U.oil  alpha.air  alpha.oil  alphas  p  p_rgh  phi  phi.air  phi.oil  rho
of_cases/customMixerVessel/orig.1.5/uniform/: cumulativeContErr  time
of_cases/customMixerVessel/system/: extrudeMeshDict.outlet  fvSchemes  setFieldsDict  topoSetDict.mesh
tests/: test_tools.py
